@@ -4,6 +4,7 @@ Revision history for {{$dist->name}}:
   [Enhancements]
   - Simplify unexpected_content rule.
 
+  - New rule: require_content.
 
 v0.4.0    2020-03-09 17:37:21+00:00 Europe/London
   [Enhancements]
